# pdf-to-markdown

./: .gitignore  CLAUDE.md  README.ko.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/moai/: builder-skill.md  expert-backend.md  expert-debug.md  expert-devops.md  expert-frontend.md  expert-performance.md  expert-refactoring.md  expert-security.md  expert-testing.md  manager-ddd.md  manager-docs.md  manager-git.md  manager-project.md  manager-quality.md  manager-spec.md  manager-strategy.md  manager-tdd.md
.claude/commands/moai/: clean.md  codemaps.md  coverage.md  e2e.md  feedback.md  fix.md  loop.md  mx.md  plan.md  project.md  review.md  run.md  sync.md
.claude/hooks/moai/: handle-agent-hook.sh  handle-compact.sh  handle-notification.sh  handle-permission-request.sh  handle-post-tool-failure.sh  handle-post-tool.sh  handle-pre-tool.sh  handle-session-end.sh  handle-session-start.sh  handle-stop.sh  handle-subagent-start.sh  handle-subagent-stop.sh  handle-task-completed.sh  handle-teammate-idle.sh  handle-user-prompt-submit.sh  handle-worktree-create.sh  handle-worktree-remove.sh
.claude/skills/moai-design-tools/: SKILL.md
.claude/skills/moai-domain-uiux/: SKILL.md
.claude/skills/moai-foundation-philosopher/: SKILL.md
.moai/: manifest.json  status_line.sh
src/pdf_to_markdown/: __init__.py  __main__.py  batch.py  cli.py  converter.py  output.py  splitter.py
tests/: conftest.py  test_batch.py  test_cli.py  test_converter.py  test_marker_backend.py  test_output.py  test_pymupdf_backend.py  test_splitter.py
(+37 files in other folders)
