[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-to-markdown"
version = "0.1.0"
description = "PDF to Markdown CLI converter using PyMuPDF4LLM and Marker backends"
requires-python = ">=3.10"
dependencies = [
    "pymupdf4llm>=0.0.17",
    "pymupdf>=1.25.0",
]

[project.optional-dependencies]
marker = ["marker-pdf>=1.0.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9.0",
]

[project.scripts]
pdf2md = "pdf_to_markdown.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_to_markdown"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.coverage.run]
source = ["pdf_to_markdown"]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.",
    "pragma: no cover",
    "\\.\\.\\.",
]
